Fix navbar bugs on mobile

--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	width: 14.5rem !important;
 	background-color: var(--primary);
+	min-height: 100vh;
 	height: 100%;
 	flex-shrink: 0;
 	z-index: 105;
@@ -13,6 +14,7 @@
 	transition: all 0.2s linear;
 
 	ul:not(.navitem-children-parent) {
+		background-color: var(--primary);
 		color: var(--white);
 		
 		li {
@@ -253,7 +255,7 @@
 
 @media (max-width: 480px) {
 	.navbar-left.mobile.mobile-opened + .navbar-left-overlay {
-		position: absolute;
+		position: fixed;
 		top: 0;
 		right: 0;
 		bottom: 0;
