--- a/src/assets/styles/overlay.scss
+++ b/src/assets/styles/overlay.scss
@@ -1,5 +1,5 @@
 .overlay {
-	position: absolute;
+	position: fixed;
 	z-index: 200;
 	top: 0;
 	right: 0;
